# performance-tracker

./: .commitlintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.md  feature_request.md  question.md
.github/workflows/: ci.yml  commit-lint.yml  release.yml
docs/: advanced_usage.md  api_reference.md  contributing.md  faq.md  installation.md  performance_benchmarks.md
examples/: basic_usage.py  memory_analysis.py  web_app_example.py
performance_tracker/: __init__.py
performance_tracker/pyperformance/: __init__.py  utils.py
pyperformance/: __init__.py  monitor.py  utils.py
tests/: test_monitor.py
