[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyperformance"
version = "0.1.0"
description = "A lightweight Python performance monitoring library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adam Kocher"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["performance", "monitoring", "profiling", "decorator", "timing", "memory"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
    "pre-commit>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-performance-monitor"
Documentation = "https://github.com/yourusername/python-performance-monitor/blob/main/docs/"
Repository = "https://github.com/yourusername/python-performance-monitor"
"Bug Reports" = "https://github.com/yourusername/python-performance-monitor/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
    "pre-commit>=2.15.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
